--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
 </head>
 <body class="antialiased">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
